--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     
     <section class="section-02">
 
-        <div class="div-02">
+        v<div class="di-02">
             <img src="https://t2.tudocdn.net/510706?w=567&h=340" alt="Imagem GitHub" style="border-radius: 50%;">
         </div>
 
